Last batch of tweaks, updated language files
Also fixed some bugs in the language exporting system.

--- a/src/main/resources/assets/hardcoreenderexpansion/lang/de_DE.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/de_DE.lang
@@ -45,7 +45,6 @@ item.igneousRock.name=Erstarrungsgestein
 item.instabilityOrb.name=Instabilitätskugel
 item.potionOfInstability.name=Trank der Instabilität
 item.potionOfInstability.splash.name=Wurftrank der Instabilität
-item.gemFragment.name=Edelsteinfragment
 item.transferenceGem.name=Übertragungs-Edelstein
 item.templeCaller.name=Tempelrufer
 item.silverfishBlood.name=Silberfischchenblut
@@ -115,37 +114,76 @@ achievement.traveling101=Reisen für Anfänger
 achievement.rebirth.desc=Benutze den Tempelrufer und regeneriere das Ende
 achievement.rebirth=Wiedergeburt
 achievement.learningThePowers.desc=Erstelle einen Drachenessenz-Altar
-=Infizierter Fledermausflügel
-=Zerbrochenes Enderman-Relikt
-=Und so beginnt es...
-=Finde die erste Seite des Abenteurerhandbuches
-=Leidenschaftlicher Leser
-=Finde alle Seiten des Abenteurerhandbuches
-=Hardcore-Spieler
-=Beschaffe ein wenig Drachenessenz
-=Das Lernen der Kräfte
-=Erstelle einen Drachenessenz-Altar
-=Verbesserte Brauerei
-=Verbessere deinen Braustand
-=Wiedergeburt
-=Platziere das Drachenei im Tempel
-=Erforscher
-=Erforsche außerhalb der Insel
-=Es funkelt!
-=Verbessere eine Enderperle
-=Geröstet
-=Krieg zu viel
-=Das vergessene Veilchen
-=Nimm eine Todesblume auf, nachdem sie gestorben ist
-=Ein toter Visionär
-=Töte das Enderauge
-=SUPERFUNKELND
-=Erstelle eine Enderperle mit allen Erweiterungen
-=Eine puzzelnde Leidenschaft
-=Töte den Feuerteufel
-=Geht heim, Endermen!
-=Töte den Enderdämon
-=Ein Quickie
-=Töte den Drachen innerhalb von 10 Minuten
-=Nackter Suizid
-=Trage keine Rüstung oder Kürbisse während des Kampfes
+item.endermanRelicShattered.name=Zerbrochenes Enderman-Relikt
+container.endPowderEnhancements=Endpulver-Verbesserungen
+achievement.theMoreYouKnow=Je mehr du weißt
+achievement.theMoreYouKnow.desc=Crafte ein Enderhandbuch
+tile.crossedDecoration.violetMoss.tall.name=Langes violettes Moos
+tile.crossedDecoration.violetMoss.moderate.name=Mittellanges violettes Moos
+tile.crossedDecoration.violetMoss.short.name=Kurzes violettes Moos
+tile.ravagedBrickSmooth.name=Glatter verwüsteter Ziegel
+tile.ravagedBrickGlow.name=Leuchtender verwüsterter Ziegel
+tile.ravagedBrickSlab.name=Verwüstete Ziegelstufe
+tile.ravagedBrickStairs.name=Verwüstete Ziegeltreppe
+tile.ravagedBrickFence.name=Verwüsterter Ziegelzaun
+tile.cinder.name=Schlackgestein
+item.scorchingPickaxe.name=Verbrennende Spitzhacke
+item.charmPouch.name=Amuletttasche
+item.rune.power.name=Rune der Kraft
+item.rune.agility.name=Rune der Beweglichkeit
+item.rune.vigor.name=Rune der Durchschlagskraft
+item.rune.defense.name=Rune der Verteidigung
+item.rune.magic.name=Rune der Magie
+item.rune.void.name=Rune der Leere
+item.charm.basicpower.name=Amulett der Kraft
+item.charm.basicagility.name=Amulett der Beweglichkeit
+item.charm.basicvigor.name=Amulett der Lebensregneration
+item.charm.basicdefense.name=Amulett der Verteidigung
+item.charm.basicmagic.name=Amulett der Magie
+item.charm.equality.name=Amulett der Gleichheit
+item.charm.blocking.name=Amulett des Blockens
+item.charm.blockingreflection.name=Amulett der Blockreflektion
+item.charm.digestiverecover.name=Amulett der Regeneration
+item.charm.lifesteal.name=Amulett des Lebensraubs
+item.charm.damageredirection.name=Amulett der Schadensweiterleitung
+item.charm.magicpenetration.name=Amulett der Magiedurchdringung
+item.charm.witcheryharm.name=Amulett des hexerischen Schadens
+item.charm.witcherydefense.name=Amulett der hexerischen Verteidigung
+item.charm.fallingprotection.name=Amulett des Fallschutzes
+item.charm.haste.name=Amulett der Eile
+item.charm.criticalstrike.name=Amulett des kritischen Schlags
+item.charm.seconddurability.name=Amulett der zweiten Haltbarkeit
+item.charm.voidrescue.name=Amulett der Leerenrettung
+item.charm.slaughterimpact.name=Amulett des Schlachtstoßes
+item.charm.lastresort.tooltip=Teleportiert mit einer Abklingzeit von\n$1 Sekunden $0 Blöcke vom tötenden Schlag weg
+item.charm.lastresort.name=Amulett der letzten Rettung
+item.charm.magicdefense.tooltip=-$0 Magischen Schaden eingenommen
+item.charm.magicdefense.name=Amulett der magischen Verteidigung
+entity.louse.name=Laus
+container.charmPouch=Amuletttasche
+container.runeCrafting=Runecrafting
+item.charm.blockingrepulsion.tooltip=-$0 Schadenseinnahme und $1x Rückstoß reflektiert
+item.charm.blockingrepulsion.name=Amulett der Rückstoßreflektion
+item.fireShard.name=Feuerscherbe
+item.charm.basicpower.tooltip=+$0 Schaden
+item.charm.basicagility.tooltip=+$0 Geschwindigkeit
+item.charm.basicvigor.tooltip=+$0 Lebensregenerations-Geschwindigkeit
+item.charm.basicdefense.tooltip=-$0 Schadenseinnahme
+item.charm.basicmagic.tooltip=+$0 Erfahrung
+item.charm.equality.tooltip=+$0 Schaden\n+$1 Geschwindigkeit\n+$2 Lebensregenerations-Geschwindigkeit\n-$3 Schadenseinnahme\n+$4 Erfahrung
+item.charm.blocking.tooltip=-$0 Schadenseinnahme während des Blockens
+item.charm.blockingreflection.tooltip=-$0 Schadenseinnahme und $1 reflektiert während des Blockens
+item.charm.digestiverecover.tooltip=$0 Gesundheit pro Hungersymbol
+item.charm.lifesteal.tooltip=$0 Leben eingenommen und $1 Schaden zugefügt
+item.charm.damageredirection.tooltip=$0 Schaden an $1 nahe Kreatur(en) weitergeleitet
+item.charm.magicpenetration.tooltip=$0 des ausgeteilten Schadens durchdringt Rüstung mit Magie
+item.charm.witcheryharm.tooltip=$0-Chance einen Level-$1-Effekt für $2 Sekunden zu verursachen
+item.charm.witcherydefense.tooltip=
+item.charm.fallingprotection.tooltip=+$0 Blöcke
+item.charm.haste.tooltip=+$0 Grabgeschwindigkeit
+item.charm.criticalstrike.tooltip=$0-Chance $1 kritischen Schaden zu verursachen
+item.charm.seconddurability.tooltip=$0-Chance $1 Haltbarkeit wiederherzustellen
+item.charm.voidrescue.tooltip=
+item.charm.slaughterimpact.tooltip=&0 Schaden in einem $1-Blöcke Radius der Tötung ausgeteilt
+item.charm.cannotstack=Dieses Amulett wird seine Effekte nicht mit\nanderen Amuletten des gleichen Typs stacken!
+entity.hauntedMiner.name=Verhexter Minenarbeiter
