--- a/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
@@ -79,6 +79,7 @@ item.enderCompendium.name=Ender Compendium
 item.knowledgeFragment.name=Knowledge Fragment
 item.enhancedBrewingStand.name=Enhanced Brewing Stand
 item.scorchingPickaxe.name=Scorching Pickaxe
+item.fireShard.name=Fire Shard
 item.charmPouch.name=Charm Pouch
 item.rune.power.name=Rune of Power
 item.rune.agility.name=Rune of Agility
