--- a/src/main/resources/assets/hardcoreenderexpansion/lang/es_ES.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/es_ES.lang
@@ -10,7 +10,7 @@ tile.essenceAltar.basic.name=Altar básico de esencia
 tile.essenceAltar.dragon.name=Altar de esencia del Dragón
 tile.essenceAltar.fiery.name=Altar fogoso de esencia
 tile.essenceAltar.spectral.name=Altar espectral de esencia
-tile.endPowderOre.name=Mena de polvo del fin
+tile.endPowderOre.name=Mena de polvo de El Fin
 tile.stardustOre.name=Mena de Polvo de Estrella
 tile.igneousRockOre.name=Mena de piedra ignea
 tile.instabilityOrbOre.name=Mineral inestable
@@ -45,7 +45,6 @@ item.igneousRock.name=Piedra ígnea
 item.instabilityOrb.name=Orbe inestable
 item.potionOfInstability.name=Poción de inestabilidad
 item.potionOfInstability.splash.name=Poción de inestabilidad arrojadiza
-item.gemFragment.name=Fragmento de Joya
 item.transferenceGem.name=Joya transparente
 item.templeCaller.name=Portero del templo
 item.silverfishBlood.name=Sangre de Lepisma
@@ -74,78 +73,117 @@ entity.forestGhost.name=Fantasma
 entity.fireGolem.name=Monstruo Gigante de Fuego
 entity.scorchingLens.name=Lentes quemadas
 namegenerator.middle=, el
-achievement.magicOfDecomposition.desc=Acquire some Stardust
+achievement.magicOfDecomposition.desc=Consigue algo de Polvo de Estrellas
 challenge.hard0Deaths=Jugador experto
 challenge.hard0Deaths.desc=Mata al dragón sin morir
 challenge.bedExplode=Imsonmio
 challenge.bedExplode.desc=Infringe la cantidad final de daño usando las explosiones de las camas
 challenge.noEnderman=Amor por los endermans
 challenge.noEnderman.desc=Na mates a ningún enderman durante la batalla
-achievement.learningThePowers=Learning the powers
-achievement.newAdventures.desc=Welcome to Hardcore Ender Expansion!
-achievement.newAdventures=Time for new adventures!
+achievement.learningThePowers=Aprendiendo los poderes
+achievement.newAdventures.desc=¡Bienvenido a Hardcore Ender Expansion!
+achievement.newAdventures=¡Hora de nuevas aventuras!
 challenge.title=Reto:
 challenge.difficulty.hard=Dificultad extrema
 challenge.difficulty.mediumorhard=Dificultad normal / extrema
-item.enderCompendium.name=Compendio del End
+item.enderCompendium.name=Compendio de El Fin
 item.knowledgeFragment.name=Fragmento del conocimiento
 tile.decompositionTable.name=Mesa de la descomposición
 tile.energyExtractionTable.name=Mesa de extracción de energía
 tile.ravagedBrick.name=Ladrillos devastados
-tile.energyCluster.name=Cúmulo de energía
+tile.energyCluster.name=Cúmulo de Energía
 item.spectralWand.name=Varita espectral
 container.enhancedBrewing=Soporte de pociones mejorado
 container.decompositionTable=Mesa de la descomposición
 container.energyExtractionTable=Mesa extractora de energía
-tile.sphalerite.name=Sphalerite
-tile.sphalerite.stardust.name=Sphalerite with Stardust
-item.spatialDashGem.name=Spatial Dash Gem
-item.biomeCompass.name=Biome Compass
-achievement.magicOfDecomposition=The magic of decomposition
-achievement.wholeNewCultures.desc=Visit a Biome Island
-achievement.wholeNewCultures=Whole new cultures!
-achievement.thatWasClose.desc=Save yourself from falling into the void
-achievement.thatWasClose=That was close!
-achievement.deadVisionary.desc=Kill an Ender Eye to get Spatial Dash Gem
-achievement.deadVisionary=Dead visionary
-achievement.superShiny.desc=Enhance and Ender Pearl with all possible items
-achievement.superShiny=Super shiny!
-achievement.traveling101.desc=Enhance an Ender Pearl
-achievement.traveling101=Traveling 101
-achievement.rebirth.desc=Use the Temple Caller and regenerate the End
-achievement.rebirth=Rebirth
-achievement.learningThePowers.desc=Create a Dragon Essence Altar
-=Reliquia de Enderman destrozada
-=Y así comienza...
-=Encuentra la primera página del Diario del Aventurero
-=Apasionado de la lectura
-=Encuentra todas las páginas del Diario del Aventurero
-=Jugador experto
-=Consigue algo de esencia de dragón
-=Pociones mejoradas
-=Mejora tu soporte para pociones
-=Renacer
-=Coloca el Huevo de Dragón en el templo
-=Explorador
-=Ve a explorar fuera de la isla
-=¡Es brillante!
-=Mejora un Ojo de Ender
-=¡Gravemente quemado!
-=Consigue gran cantidad de piedra ignea
-=La violeta olvidada
-=Coge una Flor Muerta una vez halla muerto
-=Una muerte visionaria
-=Mata el Ojo de Ender
-=SÚPER BRILLANTE
-=Crea una Perla de Ender con todas sus mejoras
-=Un apasionado de los puzles
-=Mata el demonio de fuego
-=¡Iros a casa, Endermans!
-=Mata al Demonio de Ender
-=¡Con prisa!
-=Mata al dragón en 10 minutos
-=Suicidio nudista
-=No uses ninguna armadura o calabaza durante la batalla
-=Murcielado Infectado
-=Aprendiendo los podéres
-=Crea un Altar de esencia del Dragón
+tile.sphalerite.name=Blenda
+tile.sphalerite.stardust.name=Blenda con Polvo de Estrellas
+item.spatialDashGem.name=Gema de la carrera espacial
+item.biomeCompass.name=Brújula de las Islas
+achievement.magicOfDecomposition=La magia de la descomposición
+achievement.wholeNewCultures.desc=Visita un bioma isla
+achievement.wholeNewCultures=¡Renovación cultural!
+achievement.thatWasClose.desc=Sálvate de caer en el vacio
+achievement.thatWasClose=¡Estuvo cerca!
+achievement.deadVisionary.desc=Mata un Ojo del Fin para conseguir Gemas de la Carrera Espacial
+achievement.deadVisionary=Visionario de la muerte
+achievement.superShiny.desc=¡Mejora una Perla del Fin con todos sus posibles objetos!
+achievement.superShiny=¡Super brillante!
+achievement.traveling101.desc=¡Mejora una Perla del Fin!
+achievement.traveling101=Viajando 101
+achievement.rebirth.desc=Usa el Portero del Templo y regenera El Fin
+achievement.rebirth=Renacimiento
+achievement.learningThePowers.desc=Crea un Altar de Esencia de Dragon
+item.endermanRelicShattered.name=Reliquia de Enderman rota
+container.endPowderEnhancements=Mejoras del Polvo de El Fin
+achievement.theMoreYouKnow=Cuanto más sepas mejor
+achievement.theMoreYouKnow.desc=Haz un compendio de El Fin
+tile.crossedDecoration.violetMoss.tall.name=Tall Violet Moss
+tile.crossedDecoration.violetMoss.moderate.name=Moderate Violet Moss
+tile.crossedDecoration.violetMoss.short.name=Short Violet Moss
+tile.ravagedBrickSmooth.name=Smooth Ravaged Brick
+tile.ravagedBrickGlow.name=Glowing Ravaged Brick
+tile.ravagedBrickSlab.name=Ravaged Brick Slab
+tile.ravagedBrickStairs.name=Ravaged Brick Stairs
+tile.ravagedBrickFence.name=Ravaged Brick Fence
+tile.cinder.name=Cinder
+item.scorchingPickaxe.name=Scorching Pickaxe
+item.charmPouch.name=Charm Pouch
+item.rune.power.name=Rune of Power
+item.rune.agility.name=Rune of Agility
+item.rune.vigor.name=Rune of Vigor
+item.rune.defense.name=Rune of Defense
+item.rune.magic.name=Rune of Magic
+item.rune.void.name=Rune of Void
+item.charm.basicpower.name=Charm of Power
+item.charm.basicagility.name=Charm of Agility
+item.charm.basicvigor.name=Charm of Vigor
+item.charm.basicdefense.name=Charm of Defense
+item.charm.basicmagic.name=Charm of Magic
+item.charm.equality.name=Charm of Equality
+item.charm.blocking.name=Charm of Blocking
+item.charm.blockingreflection.name=Charm of Blocking Reflection
+item.charm.digestiverecover.name=Charm of Digestive Recover
+item.charm.lifesteal.name=Charm of Life Steal
+item.charm.damageredirection.name=Charm of Damage Redirection
+item.charm.magicpenetration.name=Charm of Magic Penetration
+item.charm.witcheryharm.name=Charm of Witchery Harm
+item.charm.witcherydefense.name=Charm of Witchery Defense
+item.charm.fallingprotection.name=Charm of Falling Protection
+item.charm.haste.name=Charm of Haste
+item.charm.criticalstrike.name=Charm of Critical Strike
+item.charm.seconddurability.name=Charm of Second Durability
+item.charm.voidrescue.name=Charm of Void Rescue
+item.charm.slaughterimpact.name=Charm of Slaughter Impact
+item.charm.lastresort.tooltip=Teleports $0 blocks away from finishing hit with cooldown of $1 seconds
+item.charm.lastresort.name=Charm of Last Resort
+item.charm.magicdefense.tooltip=-$0 magic damage taken
+item.charm.magicdefense.name=Charm of Magic Defense
+entity.louse.name=Louse
+container.charmPouch=Charm Pouch
+container.runeCrafting=Rune Crafting
+item.charm.blockingrepulsion.tooltip=-$0 damage taken and $1x knockback repulsed
+item.charm.blockingrepulsion.name=Charm of Blocking Repulsion
+item.fireShard.name=Fire Shard
+item.charm.basicpower.tooltip=+$0 damage
+item.charm.basicagility.tooltip=+$0 speed
+item.charm.basicvigor.tooltip=+$0 health regeneration speed
+item.charm.basicdefense.tooltip=-$0 damage taken
+item.charm.basicmagic.tooltip=+$0 experience
+item.charm.equality.tooltip=+$0 damage\n+$1 speed\n+$2 health regeneration speed\n-$3 damage taken\n+$4 experience
+item.charm.blocking.tooltip=-$0 damage taken when blocking
+item.charm.blockingreflection.tooltip=-$0 damage taken and $1 reflected when blocking
+item.charm.digestiverecover.tooltip=$0 health per 1 hunger bar
+item.charm.lifesteal.tooltip=$0 health gained per $1 health dealt
+item.charm.damageredirection.tooltip=$0 damage redirected to $1 nearby creature(s)
+item.charm.magicpenetration.tooltip=$0 of dealt damage penetrates armor using magic
+item.charm.witcheryharm.tooltip=$0 chance to cause level $1 effect for $2 seconds
+item.charm.witcherydefense.tooltip=
+item.charm.fallingprotection.tooltip=+$0 blocks
+item.charm.haste.tooltip=+$0 dig speed
+item.charm.criticalstrike.tooltip=$0 chance to deal $1 critical damage
+item.charm.seconddurability.tooltip=$0 chance to recover $1 durability
+item.charm.voidrescue.tooltip=
+item.charm.slaughterimpact.tooltip=$0 damage dealt in $1 radius on kill
+item.charm.cannotstack=This charm will not stack effects with other charms of this type!
+entity.hauntedMiner.name=Haunted Miner
