--- a/src/main/resources/assets/hardcoreenderexpansion/lang/fr_FR.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/fr_FR.lang
@@ -45,14 +45,13 @@ item.igneousRock.name=Roche ignée
 item.instabilityOrb.name=Orbe d'instabilité
 item.potionOfInstability.name=Potion d'instabilité
 item.potionOfInstability.splash.name=Potion volatile d'instabilité
-item.gemFragment.name=Fragment de joyau
 item.transferenceGem.name=Joyau de transportation
 item.templeCaller.name=Convocateur de la Fin
 item.silverfishBlood.name=Sang de Lépisme
 item.drySplinter.name=Éclat de bois sec
 item.infestationRemedy.name=Remède contre l'infestation
 item.ghostAmulet.name=Amulette chasse-fantôme
-item.endoplasm.name=Ectoplasme du Néant
+item.endoplasm.name=Ectoplasme
 item.corporealMirageOrb.name=Orbe de mirage corporel
 item.endermanRelicRepaired.name=Relique d'Enderman
 item.bucketEnderGoo.name=Seau de substance visqueuse du Néant
@@ -74,78 +73,117 @@ entity.forestGhost.name=Fantôme
 entity.fireGolem.name=Golem de feu
 entity.scorchingLens.name=Cristallin Incandescant
 namegenerator.middle=, dit le
-achievement.magicOfDecomposition.desc=Acquire some Stardust
+achievement.magicOfDecomposition.desc=Obtenez de la poussière d'étoile
 challenge.hard0Deaths=Joueur hardcore
 challenge.hard0Deaths.desc=Tuez le dragon sans mourrir
 challenge.bedExplode=Rêve explosif
 challenge.bedExplode.desc=Tuez le dragon en dormant dans un lit
 challenge.noEnderman=Xénophile
 challenge.noEnderman.desc=Ne tuez pas un seul Enderman au cours du combat
-achievement.learningThePowers=Learning the powers
-achievement.newAdventures.desc=Welcome to Hardcore Ender Expansion!
-achievement.newAdventures=Time for new adventures!
+achievement.learningThePowers=Assimiler les pouvoirs
+achievement.newAdventures.desc=Bienvenue sur Hardcore Ender Expansion!
+achievement.newAdventures=Temps pour de nouvelles aventures!
 challenge.title=Défi:
 challenge.difficulty.hard=Difficile
 challenge.difficulty.mediumorhard=Normal / Difficile
-item.enderCompendium.name=Compendium Du  Néant
-item.knowledgeFragment.name=Fragement de connaissance
-tile.decompositionTable.name=Decomposition Table
-tile.energyExtractionTable.name=Energy Extraction Table
-tile.ravagedBrick.name=Ravaged Brick
-tile.energyCluster.name=Energy Cluster
-item.spectralWand.name=Spectral Wand
-container.enhancedBrewing=Enhanced Brewing Stand
-container.decompositionTable=Decomposition Table
-container.energyExtractionTable=Energy Extraction Table
-tile.sphalerite.name=Sphalerite
-tile.sphalerite.stardust.name=Sphalerite with Stardust
-item.spatialDashGem.name=Spatial Dash Gem
-item.biomeCompass.name=Biome Compass
-achievement.magicOfDecomposition=The magic of decomposition
-achievement.wholeNewCultures.desc=Visit a Biome Island
-achievement.wholeNewCultures=Whole new cultures!
-achievement.thatWasClose.desc=Save yourself from falling into the void
-achievement.thatWasClose=That was close!
-achievement.deadVisionary.desc=Kill an Ender Eye to get Spatial Dash Gem
-achievement.deadVisionary=Dead visionary
-achievement.superShiny.desc=Enhance and Ender Pearl with all possible items
-achievement.superShiny=Super shiny!
-achievement.traveling101.desc=Enhance an Ender Pearl
-achievement.traveling101=Traveling 101
-achievement.rebirth.desc=Use the Temple Caller and regenerate the End
-achievement.rebirth=Rebirth
-achievement.learningThePowers.desc=Create a Dragon Essence Altar
-=Suicide à poil
-=Ne portez ni armure ni citrouille durant le combat
-=Tuez le dragon en moins de 10 minutes
-=Une petite vite
-=Tuez le Démon du Néant
-=Vade Retro Endermen!
-=Tuez l'Œil du Néant
-=Créez une Perle du Néant contenant tout les enchantements
-=SUPER BRILLANT!
-=Tuez le Démon du feu
-=Nature morte
-=Ramassez une Fleur funeste une fois celle-ci morte
-=Juste un coup d'œil
-=Obtenez trop de Roche ignée
-=Réduit en cendres
-=Oh, c'est brillant!
-=Améliorez une Perle du Néant
-=Explorateur
-=Explorez à l'extérieur de l'île principale
-=À s'en casser la tête!
-=Ailes de Chauve-souris infestée
-=Relique d'Enderman brisée
-=Et c'est repartis!
-=Placez l'Œuf de dragon dans le temple de le Fin
-=Améliorez votre alambic
-=Une essence mystique
-=Ainsi l'aventure commence...
-=Trouvez la première page du Journal de l'Aventurier
-=Trouvez toutes les pages du Journal de l'Aventurier
-=Lecteur passionné
-=Obtenez de l'Essence de dragon
-=Fabriquez un Autel à essence de dragon
-=Alchimie avancée
-=Assimiler la puissance
+item.enderCompendium.name=Compendium du Néant
+item.knowledgeFragment.name=Fragment de connaissance
+tile.decompositionTable.name=Table de décomposition
+tile.energyExtractionTable.name=Table d'extraction d'Énergie
+tile.ravagedBrick.name=Brique ravagée
+tile.energyCluster.name=Grappe d'Énergie
+item.spectralWand.name=Baguette spectrale
+container.enhancedBrewing=Alambic amélioré
+container.decompositionTable=Table de décomposition
+container.energyExtractionTable=Table d'extraction d'Énergie
+tile.sphalerite.name=Sphalérite
+tile.sphalerite.stardust.name=Sphalérite contenant poussière d'étoile
+item.spatialDashGem.name=Joyau de transportation linéaire
+item.biomeCompass.name=Boussole à Îles biomes
+achievement.magicOfDecomposition=La magie de la décomposition
+achievement.wholeNewCultures.desc=Visitez une Île biome
+achievement.wholeNewCultures=De nouvelles cultures!
+achievement.thatWasClose.desc=Sauvez-vous d'une chute dans le vide
+achievement.thatWasClose=In extremis!
+achievement.deadVisionary.desc=Tuez l'Œil du Néant afin d'obtenir un joyau de transportation linéaire
+achievement.deadVisionary=Visionnaire de la Mort
+achievement.superShiny.desc=Améliorer une perle du Néant de toutes les améliorations possibles
+achievement.superShiny=Super brillant!
+achievement.traveling101.desc=Améliorer une perle du Néant
+achievement.traveling101=Voyager 101
+achievement.rebirth.desc=Utilise le convocateur de la Fin pour régénérer le Néant
+achievement.rebirth=Un nouveau départ
+achievement.learningThePowers.desc=Fabriquez un autel à essence de dragon
+item.endermanRelicShattered.name=Relique d'Enderman Fracassée
+container.endPowderEnhancements=Renforcements de Poudre de Néant
+achievement.theMoreYouKnow=Le plus que tu sais
+achievement.theMoreYouKnow.desc=Frabriquer un Compendium du Néant
+tile.crossedDecoration.violetMoss.tall.name=Tall Violet Moss
+tile.crossedDecoration.violetMoss.moderate.name=Moderate Violet Moss
+tile.crossedDecoration.violetMoss.short.name=Short Violet Moss
+tile.ravagedBrickSmooth.name=Smooth Ravaged Brick
+tile.ravagedBrickGlow.name=Glowing Ravaged Brick
+tile.ravagedBrickSlab.name=Ravaged Brick Slab
+tile.ravagedBrickStairs.name=Ravaged Brick Stairs
+tile.ravagedBrickFence.name=Ravaged Brick Fence
+tile.cinder.name=Cinder
+item.scorchingPickaxe.name=Scorching Pickaxe
+item.charmPouch.name=Charm Pouch
+item.rune.power.name=Rune of Power
+item.rune.agility.name=Rune of Agility
+item.rune.vigor.name=Rune of Vigor
+item.rune.defense.name=Rune of Defense
+item.rune.magic.name=Rune of Magic
+item.rune.void.name=Rune of Void
+item.charm.basicpower.name=Charm of Power
+item.charm.basicagility.name=Charm of Agility
+item.charm.basicvigor.name=Charm of Vigor
+item.charm.basicdefense.name=Charm of Defense
+item.charm.basicmagic.name=Charm of Magic
+item.charm.equality.name=Charm of Equality
+item.charm.blocking.name=Charm of Blocking
+item.charm.blockingreflection.name=Charm of Blocking Reflection
+item.charm.digestiverecover.name=Charm of Digestive Recover
+item.charm.lifesteal.name=Charm of Life Steal
+item.charm.damageredirection.name=Charm of Damage Redirection
+item.charm.magicpenetration.name=Charm of Magic Penetration
+item.charm.witcheryharm.name=Charm of Witchery Harm
+item.charm.witcherydefense.name=Charm of Witchery Defense
+item.charm.fallingprotection.name=Charm of Falling Protection
+item.charm.haste.name=Charm of Haste
+item.charm.criticalstrike.name=Charm of Critical Strike
+item.charm.seconddurability.name=Charm of Second Durability
+item.charm.voidrescue.name=Charm of Void Rescue
+item.charm.slaughterimpact.name=Charm of Slaughter Impact
+item.charm.lastresort.tooltip=Teleports $0 blocks away from finishing hit with cooldown of $1 seconds
+item.charm.lastresort.name=Charm of Last Resort
+item.charm.magicdefense.tooltip=-$0 magic damage taken
+item.charm.magicdefense.name=Charm of Magic Defense
+entity.louse.name=Louse
+container.charmPouch=Charm Pouch
+container.runeCrafting=Rune Crafting
+item.charm.blockingrepulsion.tooltip=-$0 damage taken and $1x knockback repulsed
+item.charm.blockingrepulsion.name=Charm of Blocking Repulsion
+item.fireShard.name=Fire Shard
+item.charm.basicpower.tooltip=+$0 damage
+item.charm.basicagility.tooltip=+$0 speed
+item.charm.basicvigor.tooltip=+$0 health regeneration speed
+item.charm.basicdefense.tooltip=-$0 damage taken
+item.charm.basicmagic.tooltip=+$0 experience
+item.charm.equality.tooltip=+$0 damage\n+$1 speed\n+$2 health regeneration speed\n-$3 damage taken\n+$4 experience
+item.charm.blocking.tooltip=-$0 damage taken when blocking
+item.charm.blockingreflection.tooltip=-$0 damage taken and $1 reflected when blocking
+item.charm.digestiverecover.tooltip=$0 health per 1 hunger bar
+item.charm.lifesteal.tooltip=$0 health gained per $1 health dealt
+item.charm.damageredirection.tooltip=$0 damage redirected to $1 nearby creature(s)
+item.charm.magicpenetration.tooltip=$0 of dealt damage penetrates armor using magic
+item.charm.witcheryharm.tooltip=$0 chance to cause level $1 effect for $2 seconds
+item.charm.witcherydefense.tooltip=
+item.charm.fallingprotection.tooltip=+$0 blocks
+item.charm.haste.tooltip=+$0 dig speed
+item.charm.criticalstrike.tooltip=$0 chance to deal $1 critical damage
+item.charm.seconddurability.tooltip=$0 chance to recover $1 durability
+item.charm.voidrescue.tooltip=
+item.charm.slaughterimpact.tooltip=$0 damage dealt in $1 radius on kill
+item.charm.cannotstack=This charm will not stack effects with other charms of this type!
+entity.hauntedMiner.name=Haunted Miner
