--- a/src/main/resources/assets/hardcoreenderexpansion/lang/he_IL.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/he_IL.lang
@@ -1,101 +1,101 @@
-tile.obsidianEnd.name=Obsidiana Decadente
-tile.obsidianStairs.name=Escadaria de Obsidiana
-tile.obsidianSpecial.smooth.name=Obsidiana Lisa
-tile.obsidianSpecial.chiseled.name=Obsidiana Talhada
-tile.obsidianSpecial.pillar.name=Pilar de Obsidiana
-tile.obsidianSpecialGlowing.smooth.name=Obsidiana Brilhante Lisa
-tile.obsidianSpecialGlowing.chiseled.name=Obsidiana Brilhante Talhada
-tile.obsidianSpecialGlowing.pillar.name=Pilar de Obsidiana Brilhante
-tile.essenceAltar.basic.name=Altar de Essências Básicas
-tile.essenceAltar.dragon.name=Altar de Essências de Dragão
-tile.essenceAltar.fiery.name=Altar de Essências Flamejantes
-tile.essenceAltar.spectral.name=Altar de Essências Espectrais
-tile.endPowderOre.name=Minério de Pó do Fim
-tile.stardustOre.name=Minério de Pó Estelar
-tile.igneousRockOre.name=Minério de Pedra Flamejante
-tile.instabilityOrbOre.name=Minério de Orb da Instabilidade
-tile.enderGoo.name=Gosma do Fim
-tile.endStoneTerrain.infested.name=Pedra do Fim Infestada
-tile.endStoneTerrain.burned.name=Pedra do Fim Queimada
-tile.endStoneTerrain.enchanted.name=Pedra do Fim Encantada
-tile.spookyLog.name=Tronco Assustador
-tile.spookyLeaves.name=Folhas Assustadoras
-tile.soulCharm.name=Amuleto das Almas
-tile.emptySoulCharm.name=Amuleto das Almas Vazio
-tile.endFlower.name=Flor Morta
-tile.crossedDecoration.thornyBush.name=Arbusto Espinhoso
-tile.crossedDecoration.infestedFern.name=Samambaia Infestada
-tile.crossedDecoration.infestedBush.name=Arbusto Ifestado
-tile.crossedDecoration.infestedGrass.name=Grama Infestada
-tile.crossedDecoration.lilyfire.name=Vitória Régia de Fogo
-tile.endermanHead.name=Cabeça de Enderman
-tile.dungeonPuzzle.unlit.name=Enigma do Calabouço (Apagado)
-tile.dungeonPuzzle.lit.name=Enigma do Calabouço (Acesso)
-tile.dungeonPuzzle.wall.name=Enigma do Calabouço (Parede)
-tile.dungeonPuzzle.wallRock.name=Enigma do Calabouço (Parede Rochosa)
-tile.dungeonPuzzle.wallLit.name=Enigma do Calabouço (Parede Acessa)
-item.essence.dragon.name=Essência do Dragão
-item.essence.fiery.name=Essência Flamejante
-item.essence.spectral.name=Essência Espectral
-item.lorePage.name=Diário do Aventureiro
-item.altarNexus.name=Altar de Nexus
-item.endPowder.name=Pó do Fim
-item.stardust.name=Pó Estelar
-item.igneousRock.name=Rocha Flamejante
-item.instabilityOrb.name=Orb da Instabilidade
-item.potionOfInstability.name=Poção da Instabilidade
-item.potionOfInstability.splash.name=Poção Arremessável de Instabilidade
-item.transferenceGem.name=Gema de Transferência
-item.templeCaller.name=Invocador do Templo
-item.silverfishBlood.name=Sangue de Traça
-item.drySplinter.name=Lasca Seca
-item.infestationRemedy.name=Medicamento Infestado
-item.ghostAmulet.name=Amuleto Fantasmagórico
-item.endoplasm.name=Enderplasma
-item.corporealMirageOrb.name=Órbita de Miragem Corporal
-item.endermanRelicRepaired.name=Relíquia do Enderman
-item.bucketEnderGoo.name=Balde de Gosma do Fim
-item.enhancedBrewingStand.name=Estante de Fermentação Melhorada
-entity.dragon.derpy.name=Reptil Superdesenvolvido Burro
-entity.dragon.baby.name=Dragão do Fim Bebê
-entity.dragon.angry.name=Dragão do Fim Nervoso
-entity.dragon.doom.name=Sua Morte
-entity.enderEye.name=Olho do Fim
-entity.fireFiend.name=Demônio de Fogo
-entity.enderDemon.name=Demônio do Fim
-entity.angryEnderman.name=Enderman Nervoso
-entity.babyEnderman.name=Enderman Bebê
-entity.brainlessEnderman.name=Enderman Paralizado
-entity.enderGuardian.name=Guardião do Fim
-entity.vampireBat.name=Morcego Vampiro
-entity.infestedBat.name=Morcego Infestado
-entity.forestGhost.name=Fantasma
-entity.fireGolem.name=Golem de Fogo
-entity.scorchingLens.name=Lentes Ardentes
-namegenerator.middle=, o
+tile.obsidianEnd.name=אובסידיאן נופל
+tile.obsidianStairs.name=מדרגות אובסידיאן
+tile.obsidianSpecial.smooth.name=אובסידיאן חלק
+tile.obsidianSpecial.chiseled.name=אובסידיאן מסותת
+tile.obsidianSpecial.pillar.name=עמוד אובסידיאן
+tile.obsidianSpecialGlowing.smooth.name=אובסידיאן חלק וזוהר
+tile.obsidianSpecialGlowing.chiseled.name=אובסידיאן מסותת וזוהר
+tile.obsidianSpecialGlowing.pillar.name=עמוד אובסידיאן זוהר
+tile.essenceAltar.basic.name=מזבח של תמצית בסיסית
+tile.essenceAltar.dragon.name=מזבח של תמצית דרקון
+tile.essenceAltar.fiery.name=מזבח של תמצית לוהטת
+tile.essenceAltar.spectral.name=מזבח של תמצית רפאים
+tile.endPowderOre.name=מחצב של אבקת סוף
+tile.stardustOre.name=Stardust Ore
+tile.igneousRockOre.name=מחצב של אבן וולקנית
+tile.instabilityOrbOre.name=מחצב של גלגל לא יציב
+tile.enderGoo.name=Ender Goo
+tile.endStoneTerrain.infested.name=Infested End Stone
+tile.endStoneTerrain.burned.name=Burned End Stone
+tile.endStoneTerrain.enchanted.name=Enchanted End Stone
+tile.spookyLog.name=Spooky Log
+tile.spookyLeaves.name=Spooky Leaves
+tile.soulCharm.name=Soul Charm
+tile.emptySoulCharm.name=Soul Charm Receptacle
+tile.endFlower.name=Death Flower
+tile.crossedDecoration.thornyBush.name=Thorny Bush
+tile.crossedDecoration.infestedFern.name=Infested Fern
+tile.crossedDecoration.infestedBush.name=Infested Bush
+tile.crossedDecoration.infestedGrass.name=Infested Grass
+tile.crossedDecoration.lilyfire.name=Lilyfire
+tile.endermanHead.name=Enderman Head
+tile.dungeonPuzzle.unlit.name=Dungeon Puzzle (Unlit)
+tile.dungeonPuzzle.lit.name=Dungeon Puzzle (Lit)
+tile.dungeonPuzzle.wall.name=Dungeon Puzzle (Wall)
+tile.dungeonPuzzle.wallRock.name=Dungeon Puzzle (Wall Rock)
+tile.dungeonPuzzle.wallLit.name=Dungeon Puzzle (Lit Wall)
+item.essence.dragon.name=Dragon Essence
+item.essence.fiery.name=Fiery Essence
+item.essence.spectral.name=Spectral Essence
+item.lorePage.name=Adventurer's Diary
+item.altarNexus.name=Altar Nexus
+item.endPowder.name=End Powder
+item.stardust.name=Stardust
+item.igneousRock.name=Igneous Rock
+item.instabilityOrb.name=Instability Orb
+item.potionOfInstability.name=Potion of Instability
+item.potionOfInstability.splash.name=Splash Potion of Instability
+item.transferenceGem.name=Transference Gem
+item.templeCaller.name=Temple Caller
+item.silverfishBlood.name=Silverfish Blood
+item.drySplinter.name=Dry Splinter
+item.infestationRemedy.name=Infestation Remedy
+item.ghostAmulet.name=Ghost Amulet
+item.endoplasm.name=Ectoplasm
+item.corporealMirageOrb.name=Corporeal Mirage Orb
+item.endermanRelicRepaired.name=Enderman Relic
+item.bucketEnderGoo.name=Ender Goo Bucket
+item.enhancedBrewingStand.name=Enhanced Brewing Stand
+entity.dragon.derpy.name=Derpy Overgrown Reptile
+entity.dragon.baby.name=Baby Ender Dragon
+entity.dragon.angry.name=Angry Ender Dragon
+entity.dragon.doom.name=Your Doom
+entity.enderEye.name=Ender Eye
+entity.fireFiend.name=Fire Fiend
+entity.enderDemon.name=Ender Demon
+entity.angryEnderman.name=Angry Enderman
+entity.babyEnderman.name=Baby Enderman
+entity.brainlessEnderman.name=Paralyzed Enderman
+entity.enderGuardian.name=Ender Guardian
+entity.vampireBat.name=Vampire Bat
+entity.infestedBat.name=Infested Bat
+entity.forestGhost.name=Ghost
+entity.fireGolem.name=Fire Golem
+entity.scorchingLens.name=Scorching Lens
+namegenerator.middle=, the
 achievement.magicOfDecomposition.desc=Acquire some Stardust
-challenge.hard0Deaths=Jogador HARDCORE!
-challenge.hard0Deaths.desc=Mate o Dragão sem morrer
-challenge.bedExplode=Insônia
-challenge.bedExplode.desc=De a última quantidade de dano usando a explosão de uma cama
-challenge.noEnderman=AmanteDoFim
-challenge.noEnderman.desc=Não mate nenhum Enderman durante a batalha
+challenge.hard0Deaths=Hardcore Player
+challenge.hard0Deaths.desc=Kill the dragon without dying
+challenge.bedExplode=Insomniac
+challenge.bedExplode.desc=Deal the finishing amount of damage using bed explosion
+challenge.noEnderman=Enderlover
+challenge.noEnderman.desc=Don't kill a single enderman during the battle
 achievement.learningThePowers=Learning the powers
 achievement.newAdventures.desc=Welcome to Hardcore Ender Expansion!
 achievement.newAdventures=Time for new adventures!
-challenge.title=Desafio:
-challenge.difficulty.hard=Dificuldade Difícil
-challenge.difficulty.mediumorhard=Dificuldade Difícil / Normal
-item.enderCompendium.name=Compendium do Ender
-item.knowledgeFragment.name=Fragmento de Conhecimento
-tile.decompositionTable.name=Mesa de Decomposição
-tile.energyExtractionTable.name=Mesa de Extração de Energia
-tile.ravagedBrick.name=Tijolo Devastado
-tile.energyCluster.name=Bloco de Energia
-item.spectralWand.name=Bastão Espectral
-container.enhancedBrewing=Estante de Fermentação Melhorada
-container.decompositionTable=Mesa de Desconstrução
-container.energyExtractionTable=Mesa de Extração de Energia
+challenge.title=Challenge:
+challenge.difficulty.hard=Hard difficulty
+challenge.difficulty.mediumorhard=Normal / Hard difficulty
+item.enderCompendium.name=Ender Compendium
+item.knowledgeFragment.name=Knowledge Fragment
+tile.decompositionTable.name=שולחן פירוק
+tile.energyExtractionTable.name=לוח הפקת אנרגיה
+tile.ravagedBrick.name=Ravaged Brick
+tile.energyCluster.name=Energy Cluster
+item.spectralWand.name=Spectral Wand
+container.enhancedBrewing=Enhanced Brewing Stand
+container.decompositionTable=Decomposition Table
+container.energyExtractionTable=Energy Extraction Table
 tile.sphalerite.name=Sphalerite
 tile.sphalerite.stardust.name=Sphalerite with Stardust
 item.spatialDashGem.name=Spatial Dash Gem
