--- a/src/main/resources/assets/hardcoreenderexpansion/lang/ru_RU.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/ru_RU.lang
@@ -1,151 +1,189 @@
-tile.obsidianEnd.name=Эндер обсидиан
+tile.obsidianEnd.name=Падающий обсидиан
 tile.obsidianStairs.name=Обсидиановые ступеньки
 tile.obsidianSpecial.smooth.name=Гладкий обсидиан
-tile.obsidianSpecial.chiseled.name=Граненый обсидиан
-tile.obsidianSpecial.pillar.name=Обсидиановая колонна
-tile.obsidianSpecialGlowing.smooth.name=Гладкий светокамень
-tile.obsidianSpecialGlowing.chiseled.name=Граненый светокамень
-tile.obsidianSpecialGlowing.pillar.name=Светокаменная колонна
-tile.essenceAltar.basic.name=Алтарь
-tile.essenceAltar.dragon.name=Драконий Алтарь
-tile.essenceAltar.fiery.name=Огненный Алтарь
-tile.essenceAltar.spectral.name=Спектральный Алтарь
-tile.endPowderOre.name=Порошковая Руда
-tile.stardustOre.name=Руда Звёздной Пыли
-tile.igneousRockOre.name=Зажигательный камень
-tile.instabilityOrbOre.name=Руда Сферы Нестабильности
-tile.enderGoo.name=Эндер слизь
-tile.endStoneTerrain.infested.name=Зараженный эндерняк
-tile.endStoneTerrain.burned.name=Огненный эндерняк
-tile.endStoneTerrain.enchanted.name=Зачарованный эндерняк
-tile.spookyLog.name=Страшное бревно
-tile.spookyLeaves.name=Страшные листья
-tile.soulCharm.name=Амулет Души
-tile.emptySoulCharm.name=Пустой Амулет Души
+tile.obsidianSpecial.chiseled.name=Резной обсидиан
+tile.obsidianSpecial.pillar.name=Колонна из обсидиана
+tile.obsidianSpecialGlowing.smooth.name=Гладкий светящийся обсидиан
+tile.obsidianSpecialGlowing.chiseled.name=Резной светящийся обсидиан
+tile.obsidianSpecialGlowing.pillar.name=Колонна из светящегося обсидиана
+tile.essenceAltar.basic.name=Основной алтарь эссенции
+tile.essenceAltar.dragon.name=Алтарь драконий эссенции
+tile.essenceAltar.fiery.name=Алтарь пламенной эссенции
+tile.essenceAltar.spectral.name=Алтарь спектральной эссенции
+tile.endPowderOre.name=Руда порошка Края
+tile.stardustOre.name=Руда звёздной пыли
+tile.igneousRockOre.name=Руда магматической породы
+tile.instabilityOrbOre.name=Руда сферы нестабильности
+tile.enderGoo.name=Слизь Края
+tile.endStoneTerrain.infested.name=Заражённый камень Края
+tile.endStoneTerrain.burned.name=Сожжённый камень Края
+tile.endStoneTerrain.enchanted.name=Зачарованный камень Края
+tile.spookyLog.name=Жуткое бревно
+tile.spookyLeaves.name=Жуткие листья
+tile.soulCharm.name=Амулет души
+tile.emptySoulCharm.name=Пустой амулет души
 tile.endFlower.name=Цветок смерти
 tile.crossedDecoration.thornyBush.name=Колючий куст
-tile.crossedDecoration.infestedFern.name=Зараженный папоротник
-tile.crossedDecoration.infestedBush.name=Зараженный куст
-tile.crossedDecoration.infestedGrass.name=Зараженная трава
+tile.crossedDecoration.infestedFern.name=Заражённый папоротник
+tile.crossedDecoration.infestedBush.name=Заражённый куст
+tile.crossedDecoration.infestedGrass.name=Заражённая трава
 tile.crossedDecoration.lilyfire.name=Огненная лилия
-tile.endermanHead.name=Голова эндермена
-tile.dungeonPuzzle.unlit.name=Головоломка темницы (выкл)
-tile.dungeonPuzzle.lit.name=Головоломка темницы (вкл)
-tile.dungeonPuzzle.wall.name=Головоломка темницы (стена)
-tile.dungeonPuzzle.wallRock.name=Головоломка темницы (каменная стена)
-tile.dungeonPuzzle.wallLit.name=Головоломка темницы (горящая стена)
+tile.endermanHead.name=Голова странника Края
+tile.dungeonPuzzle.unlit.name=Головоломка темницы (Выкл)
+tile.dungeonPuzzle.lit.name=Головоломка темницы (Вкл)
+tile.dungeonPuzzle.wall.name=Головоломка темницы (Стена)
+tile.dungeonPuzzle.wallRock.name=Головоломка темницы (Каменная стена)
+tile.dungeonPuzzle.wallLit.name=Головоломка темницы (Горящая стена)
 item.essence.dragon.name=Драконья эссенция
-item.essence.fiery.name=Огненная эссенция
-item.essence.spectral.name=Спектральная Эссенция
-item.lorePage.name=Дневник Искателя Приключений
-item.altarNexus.name=Нексус Алтаря
+item.essence.fiery.name=Пламенная эссенция
+item.essence.spectral.name=Спектральная эссенция
+item.lorePage.name=Дневник путешественника
+item.altarNexus.name=Нексус алтаря
 item.endPowder.name=Порошок Края
-item.stardust.name=Звездная Пыль
-item.igneousRock.name=Горящий камень
+item.stardust.name=Звездная пыль
+item.igneousRock.name=Магматическая порода
 item.instabilityOrb.name=Нестабильная сфера
 item.potionOfInstability.name=Зелье нестабильности
-item.potionOfInstability.splash.name=Взрывное зелье Нестабильности
-item.gemFragment.name=Осколок Самоцвета
+item.potionOfInstability.splash.name=Взрывное зелье нестабильности
 item.transferenceGem.name=Самоцвет переноса
-item.templeCaller.name=Призыватель Храма
-item.silverfishBlood.name=Кровь Чешуйницы
-item.drySplinter.name=Сухой Осколок
-item.infestationRemedy.name=Отвар Наводнения
-item.ghostAmulet.name=Амулет Призрака
-item.endoplasm.name=Эндерплазма
-item.corporealMirageOrb.name=Телесная Сфера Иллюзий
-item.endermanRelicRepaired.name=Реликвия эндермена
-item.bucketEnderGoo.name=Ведро эндерслизи
+item.templeCaller.name=Призыватель храма
+item.silverfishBlood.name=Кровь чешуйницы
+item.drySplinter.name=Сухой осколок
+item.infestationRemedy.name=Отвар наводнения
+item.ghostAmulet.name=Амулет призрака
+item.endoplasm.name=Эктоплазма
+item.corporealMirageOrb.name=Телесная сфера иллюзий
+item.endermanRelicRepaired.name=Реликвия Края
+item.bucketEnderGoo.name=Ведро слизи Края
 item.enhancedBrewingStand.name=Улучшенная варочная стойка
-entity.dragon.derpy.name=Странная огромная рептилия
-entity.dragon.baby.name=Кроха эндердракон
-entity.dragon.angry.name=Злой эндердракон
+entity.dragon.derpy.name=Странная заросшая рептилия
+entity.dragon.baby.name=Маленький дракон Края
+entity.dragon.angry.name=Злой дракон Края
 entity.dragon.doom.name=Ваша гибель
-entity.enderEye.name=Глаз эндера
-entity.fireFiend.name=Огненный Голем
-entity.enderDemon.name=Эндердемон
-entity.angryEnderman.name=Злой эндермен
-entity.babyEnderman.name=Кроха эндермен
-entity.brainlessEnderman.name=Парализованный Эндермен
-entity.enderGuardian.name=Защитник Энда
-entity.vampireBat.name=Мышь-Вампир
-entity.infestedBat.name=Зараженная мышь
+entity.enderEye.name=Око Края
+entity.fireFiend.name=Огненный злодей
+entity.enderDemon.name=Демон Края
+entity.angryEnderman.name=Злой странник Края
+entity.babyEnderman.name=Маленький странник Края
+entity.brainlessEnderman.name=Парализованный странник Края
+entity.enderGuardian.name=Хранитель Края
+entity.vampireBat.name=Мышь-вампир
+entity.infestedBat.name=Заражённая мышь
 entity.forestGhost.name=Призрак
 entity.fireGolem.name=Огненный голем
 entity.scorchingLens.name=Обжигающая линза
 namegenerator.middle=,
-achievement.magicOfDecomposition.desc=Acquire some Stardust
+achievement.magicOfDecomposition.desc=Получите немного звёздной пыли
 challenge.hard0Deaths=Хардкорный игрок
-challenge.hard0Deaths.desc=Убей дракона не умерев
+challenge.hard0Deaths.desc=Убейте дракона не умерев
 challenge.bedExplode=Бессонница
-challenge.bedExplode.desc=Добей врага используя взрыв от кровати
-challenge.noEnderman=Любитель Энда
-challenge.noEnderman.desc=Не убей ни одного эндермена в битве
-achievement.learningThePowers=Learning the powers
-achievement.newAdventures.desc=Welcome to Hardcore Ender Expansion!
-achievement.newAdventures=Time for new adventures!
-challenge.title=Задача:
-challenge.difficulty.hard=Уровень Сложный
-challenge.difficulty.mediumorhard=Уровень Нормальный / Сложный
-item.enderCompendium.name=Эндер Словарь
-item.knowledgeFragment.name=Фрагмент Знаний
-tile.decompositionTable.name=Decomposition Table
-tile.energyExtractionTable.name=Energy Extraction Table
-tile.ravagedBrick.name=Ravaged Brick
-tile.energyCluster.name=Energy Cluster
-item.spectralWand.name=Spectral Wand
-container.enhancedBrewing=Enhanced Brewing Stand
-container.decompositionTable=Decomposition Table
-container.energyExtractionTable=Energy Extraction Table
-tile.sphalerite.name=Sphalerite
-tile.sphalerite.stardust.name=Sphalerite with Stardust
-item.spatialDashGem.name=Spatial Dash Gem
-item.biomeCompass.name=Biome Compass
-achievement.magicOfDecomposition=The magic of decomposition
-achievement.wholeNewCultures.desc=Visit a Biome Island
-achievement.wholeNewCultures=Whole new cultures!
-achievement.thatWasClose.desc=Save yourself from falling into the void
-achievement.thatWasClose=That was close!
-achievement.deadVisionary.desc=Kill an Ender Eye to get Spatial Dash Gem
-achievement.deadVisionary=Dead visionary
-achievement.superShiny.desc=Enhance and Ender Pearl with all possible items
-achievement.superShiny=Super shiny!
-achievement.traveling101.desc=Enhance an Ender Pearl
-achievement.traveling101=Traveling 101
-achievement.rebirth.desc=Use the Temple Caller and regenerate the End
-achievement.rebirth=Rebirth
-achievement.learningThePowers.desc=Create a Dragon Essence Altar
-=Разбитая реликвия эндермена
-=Итак, мы начинаем...
-=Найдите первую страницу Дневника авантюриста
-=Увлеченный читатель
-=Найдите все страницы Дневника авантюриста
-=Хардкорный игрок
-=Добудьте Драконьей эссенции
-=Улучшенное зельеварение
-=Улучшите варочную стойку
-=Возрождение
-=Разместите яйцо Дракона в храме
-=Путник
-=Исследуйте остров
-=Блестяшка!
-=Зачаруйте эндер жемчужину
-=Сгорите до корочки
-=Добудьте слишком много Горящео камня
-=Забытый фиолет
-=Подберите Цветок смерти когда он умрет
-=Мертвый провидец
-=Убейте эндер глаз
-=Супер блестяшка
-=Создайте Эндер око со всеми улучшениями
-=Страсть к головоломкам
-=Убийство огненного злодея
-=Убирайся домой, Эндермен
-=Убийство Эндер демона
-=Шустрый
-=Убей дракона за 10 минут
-=Самоубийца
-=Не надевай бронию или тыкву во время боя
-=Создать Драконий Алтарь
-=Учимся новым умениям
-=Крыло Летучей мыши наводнения
+challenge.bedExplode.desc=Добейте врага, используя взрыв от кровати
+challenge.noEnderman=Любитель Края
+challenge.noEnderman.desc=Не убейте ни одного странника Края в битве
+achievement.learningThePowers=Учимся энергии
+achievement.newAdventures.desc=Добро пожаловать в Hardcore Ender Expansion!
+achievement.newAdventures=Время для новых приключений!
+challenge.title=Испытание:
+challenge.difficulty.hard=Тяжёлая сложность
+challenge.difficulty.mediumorhard=Нормальная / тяжёлая сложность
+item.enderCompendium.name=Компендиум Края
+item.knowledgeFragment.name=Фрагмент знаний
+tile.decompositionTable.name=Стол разложения
+tile.energyExtractionTable.name=Стол извлечения энергии
+tile.ravagedBrick.name=Разрушенный кирпич
+tile.energyCluster.name=Энергетический кластер
+item.spectralWand.name=Спектральный посох
+container.enhancedBrewing=Улучшенная варочная стойка
+container.decompositionTable=Стол разложения
+container.energyExtractionTable=Стол извлечения энергии
+tile.sphalerite.name=Сфалерит
+tile.sphalerite.stardust.name=Сфалерит с звёздной пылью
+item.spatialDashGem.name=Самоцвет пространственного рывка
+item.biomeCompass.name=Компас биомов
+achievement.magicOfDecomposition=Магия разложения
+achievement.wholeNewCultures.desc=Посетите биом-остров
+achievement.wholeNewCultures=Целые новые культуры!
+achievement.thatWasClose.desc=Спаситесь от падения в пустоту
+achievement.thatWasClose=Это было близко!
+achievement.deadVisionary.desc=Убейте око Края, чтобы получить самоцвет пространственного рывка
+achievement.deadVisionary=Мёртвый провидец
+achievement.superShiny.desc=Улучшите жемчуг Края всеми возможными предметами
+achievement.superShiny=Очень блестящий!
+achievement.traveling101.desc=Улучшите жемчуг Края
+achievement.traveling101=Путешествие 101
+achievement.rebirth.desc=Используйте призыватель храма и пересоздайте Край
+achievement.rebirth=Возрождение
+achievement.learningThePowers.desc=Сделайте алтарь драконий эссенции
+item.endermanRelicShattered.name=Разрушенная реликвия Края
+container.endPowderEnhancements=Зачарования порошком Края
+achievement.theMoreYouKnow=Чем больше Вы знаете
+achievement.theMoreYouKnow.desc=Сделайте компендиум Края
+tile.crossedDecoration.violetMoss.tall.name=Высокий фиолетовый мох
+tile.crossedDecoration.violetMoss.moderate.name=Средний фиолетовый мох
+tile.crossedDecoration.violetMoss.short.name=Короткий фиолетовый мох
+tile.ravagedBrickSmooth.name=Гладкий разрушенный кирпич
+tile.ravagedBrickGlow.name=Светящийся разрушенный кирпич
+tile.ravagedBrickSlab.name=Плита из разрушенного кирпича
+tile.ravagedBrickStairs.name=Ступеньки из разрушенного кирпича
+tile.ravagedBrickFence.name=Забор из разрушенного кирпича
+tile.cinder.name=Пепел
+item.scorchingPickaxe.name=Уничтожающая кирка
+item.charmPouch.name=Чехол для амулета
+item.rune.power.name=Руна энергии
+item.rune.agility.name=Руна ловкости
+item.rune.vigor.name=Руна силы
+item.rune.defense.name=Руна обороны
+item.rune.magic.name=Руна магии
+item.rune.void.name=Руна пустоты
+item.charm.basicpower.name=Амулет энергии
+item.charm.basicagility.name=Амулет ловкости
+item.charm.basicvigor.name=Амулет силы
+item.charm.basicdefense.name=Амулет обороны
+item.charm.basicmagic.name=Амулет магии
+item.charm.equality.name=Амулет равенства
+item.charm.blocking.name=Амулет блокирования
+item.charm.blockingreflection.name=Амулет блокирования отражения
+item.charm.digestiverecover.name=Амулет пищеварительного восстановления
+item.charm.lifesteal.name=Амулет вампиризма
+item.charm.damageredirection.name=Амулет перенаправления урона
+item.charm.magicpenetration.name=Амулет магического проникновения
+item.charm.witcheryharm.name=Амулет колдовского вреда
+item.charm.witcherydefense.name=Амулет колдовской защиты
+item.charm.fallingprotection.name=Амулет защиты от падения
+item.charm.haste.name=Амулет быстроты
+item.charm.criticalstrike.name=Амулет критического удара
+item.charm.seconddurability.name=Амулет вторичной прочности
+item.charm.voidrescue.name=Амулет спасения из пустоты
+item.charm.slaughterimpact.name=Амулет уменьшения импульса
+item.charm.lastresort.tooltip=Teleports $0 blocks away from finishing hit with cooldown of $1 seconds
+item.charm.lastresort.name=Charm of Last Resort
+item.charm.magicdefense.tooltip=-$0 magic damage taken
+item.charm.magicdefense.name=Charm of Magic Defense
+entity.louse.name=Вошь
+container.charmPouch=Чехол для амулета
+container.runeCrafting=Создание руны
+item.charm.blockingrepulsion.tooltip=-$0 damage taken and $1x knockback repulsed
+item.charm.blockingrepulsion.name=Charm of Blocking Repulsion
+item.fireShard.name=Fire Shard
+item.charm.basicpower.tooltip=+$0 урона
+item.charm.basicagility.tooltip=+$0 скорости
+item.charm.basicvigor.tooltip=+$0 скорости регенерации здоровья
+item.charm.basicdefense.tooltip=-$0 получения урона
+item.charm.basicmagic.tooltip=+$0 опыта
+item.charm.equality.tooltip=+$0 урона\n+$1 скорости\n+$2 скорости регенерации здоровья\n-$3 получения урона\n+$4 опыта
+item.charm.blocking.tooltip=-$0 получения урона, при блокировании
+item.charm.blockingreflection.tooltip=-$0 получения урона и $1 отражения урона, при блокировании
+item.charm.digestiverecover.tooltip=$0 health per 1 hunger bar
+item.charm.lifesteal.tooltip=$0 health gained per $1 health dealt
+item.charm.damageredirection.tooltip=$0 damage redirected to $1 nearby creature(s)
+item.charm.magicpenetration.tooltip=$0 of dealt damage penetrates armor using magic
+item.charm.witcheryharm.tooltip=$0 chance to cause level $1 effect for $2 seconds
+item.charm.witcherydefense.tooltip=
+item.charm.fallingprotection.tooltip=+$0 blocks
+item.charm.haste.tooltip=+$0 скорости копания
+item.charm.criticalstrike.tooltip=Шанс $0, нанесения $1 критического урона 
+item.charm.seconddurability.tooltip=$0 chance to recover $1 durability
+item.charm.voidrescue.tooltip=
+item.charm.slaughterimpact.tooltip=$0 damage dealt in $1 radius on kill
+item.charm.cannotstack=This charm will not stack effects with other charms of this type!
+entity.hauntedMiner.name=Haunted Miner
