--- a/src/main/resources/assets/hardcoreenderexpansion/lang/zh_CN.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/zh_CN.lang
@@ -45,7 +45,6 @@ item.igneousRock.name=火成岩
 item.instabilityOrb.name=震荡球
 item.potionOfInstability.name=不稳定药水
 item.potionOfInstability.splash.name=溅射的不稳定药水
-item.gemFragment.name=宝石碎片
 item.transferenceGem.name=传送宝石
 item.templeCaller.name=神庙召唤物
 item.silverfishBlood.name=蠹虫之血
@@ -74,78 +73,117 @@ entity.forestGhost.name=幽魂
 entity.fireGolem.name=火傀儡
 entity.scorchingLens.name=灼热之眼
 namegenerator.middle=,
-achievement.magicOfDecomposition.desc=Acquire some Stardust
+achievement.magicOfDecomposition.desc=获得一些星辰
 challenge.hard0Deaths=极限玩家
-challenge.hard0Deaths.desc=屠龙而不死
+challenge.hard0Deaths.desc=屠龙不死
 challenge.bedExplode=不眠者
 challenge.bedExplode.desc=利用爆炸的床完成最后伤害
 challenge.noEnderman=末影人爱好者
 challenge.noEnderman.desc=在战斗中不杀死任何末影人
-achievement.learningThePowers=Learning the powers
-achievement.newAdventures.desc=Welcome to Hardcore Ender Expansion!
-achievement.newAdventures=Time for new adventures!
+achievement.learningThePowers=掌控新的力量
+achievement.newAdventures.desc=欢迎来到极限末地!
+achievement.newAdventures=开始新的冒险!
 challenge.title=挑战:
 challenge.difficulty.hard=困难难度
 challenge.difficulty.mediumorhard=标准/困难难度
-item.enderCompendium.name=Ender Compendium
-item.knowledgeFragment.name=Knowledge Fragment
-tile.decompositionTable.name=Decomposition Table
-tile.energyExtractionTable.name=Energy Extraction Table
-tile.ravagedBrick.name=Ravaged Brick
+item.enderCompendium.name=末地手册
+item.knowledgeFragment.name=学识碎片
+tile.decompositionTable.name=分解台
+tile.energyExtractionTable.name=能量提取台
+tile.ravagedBrick.name=毁灭砖块
 tile.energyCluster.name=Energy Cluster
-item.spectralWand.name=Spectral Wand
-container.enhancedBrewing=Enhanced Brewing Stand
-container.decompositionTable=Decomposition Table
-container.energyExtractionTable=Energy Extraction Table
-tile.sphalerite.name=Sphalerite
-tile.sphalerite.stardust.name=Sphalerite with Stardust
+item.spectralWand.name=光谱魔杖
+container.enhancedBrewing=强化酿造台
+container.decompositionTable=分解台
+container.energyExtractionTable=能量提取台
+tile.sphalerite.name=闪锌矿
+tile.sphalerite.stardust.name=闪锌星辰
 item.spatialDashGem.name=Spatial Dash Gem
-item.biomeCompass.name=Biome Compass
-achievement.magicOfDecomposition=The magic of decomposition
-achievement.wholeNewCultures.desc=Visit a Biome Island
-achievement.wholeNewCultures=Whole new cultures!
-achievement.thatWasClose.desc=Save yourself from falling into the void
-achievement.thatWasClose=That was close!
-achievement.deadVisionary.desc=Kill an Ender Eye to get Spatial Dash Gem
-achievement.deadVisionary=Dead visionary
-achievement.superShiny.desc=Enhance and Ender Pearl with all possible items
-achievement.superShiny=Super shiny!
-achievement.traveling101.desc=Enhance an Ender Pearl
-achievement.traveling101=Traveling 101
-achievement.rebirth.desc=Use the Temple Caller and regenerate the End
-achievement.rebirth=Rebirth
-achievement.learningThePowers.desc=Create a Dragon Essence Altar
-=破损末影人遗物
-=就这样开始吧…
-=找到冒险家日志的第一页
-=热情的读者
-=找到冒险家日志的所有书页
-=极限玩家
-=取得一些龙之精华
-=强化酿造台
-=升级你的酿造台
-=重生
-=将末影龙蛋放入神庙
-=探索者
-=探索岛外的世界
-=它在闪闪发光!
-=强化末影珍珠
-=烤得酥脆
-=得到了过多火成岩
-=被遗忘的紫罗兰
-=在亡者之花枯萎后拾取它
-=死亡之眼
-=杀死末影之眼
-=格外闪亮
-=制作出拥有全部强化的末影珍珠
-=迷之激情
-=杀死烈焰魔
-=回家吧，末影人!
-=杀死末影魔
-=速战速决
-=10分钟内屠龙
-=裸战末影龙
-=在战斗中不穿戴任何装备(包括南瓜头)
-=腐化蝠翼
-=学习力量之道
-=搭建龙之精华祭坛
+item.biomeCompass.name=群落指向针
+achievement.magicOfDecomposition=分解的魔力
+achievement.wholeNewCultures.desc=游览一个空岛群落
+achievement.wholeNewCultures=壮丽的新景观!
+achievement.thatWasClose.desc=拯救自己掉入虚空
+achievement.thatWasClose=好险!
+achievement.deadVisionary.desc=杀死末影之言并获得空间宝石
+achievement.deadVisionary=死亡之预言
+achievement.superShiny.desc=强化和末影珍珠有关的所有物品
+achievement.superShiny=超级闪亮!
+achievement.traveling101.desc=强化一个末影珍珠
+achievement.traveling101=旅行 101
+achievement.rebirth.desc=使用神庙召唤物重生末地
+achievement.rebirth=重生
+achievement.learningThePowers.desc=创造一个龙之精华祭坛
+item.endermanRelicShattered.name=破碎的末影人遗物
+container.endPowderEnhancements=附魔末影粉
+achievement.theMoreYouKnow=了解更多
+achievement.theMoreYouKnow.desc=合成一个末地手册
+tile.crossedDecoration.violetMoss.tall.name=高大的紫苔
+tile.crossedDecoration.violetMoss.moderate.name=中型紫苔
+tile.crossedDecoration.violetMoss.short.name=矮紫苔
+tile.ravagedBrickSmooth.name=平滑毁灭砖块
+tile.ravagedBrickGlow.name=发光毁灭砖块
+tile.ravagedBrickSlab.name=毁灭半砖
+tile.ravagedBrickStairs.name=毁灭砖楼梯
+tile.ravagedBrickFence.name=毁灭砖围栏
+tile.cinder.name=Cinder
+item.scorchingPickaxe.name=灼热之镐
+item.charmPouch.name=护符袋
+item.rune.power.name=力量符文
+item.rune.agility.name=敏捷符文
+item.rune.vigor.name=活力符文
+item.rune.defense.name=防御符文
+item.rune.magic.name=魔法符文
+item.rune.void.name=虚空符文
+item.charm.basicpower.name=力量护符
+item.charm.basicagility.name=敏捷护符
+item.charm.basicvigor.name=活力护符
+item.charm.basicdefense.name=防御护符
+item.charm.basicmagic.name=魔法护符
+item.charm.equality.name=平衡护符
+item.charm.blocking.name=采掘护符
+item.charm.blockingreflection.name=采掘反射护符
+item.charm.digestiverecover.name=恢复护符
+item.charm.lifesteal.name=生命偷取护符
+item.charm.damageredirection.name=伤害转移护符
+item.charm.magicpenetration.name=魔法穿透护符
+item.charm.witcheryharm.name=巫术打击护符
+item.charm.witcherydefense.name=巫术防御护符
+item.charm.fallingprotection.name=跌落保护护符
+item.charm.haste.name=急速护符
+item.charm.criticalstrike.name=暴击护符
+item.charm.seconddurability.name=双重耐久护符
+item.charm.voidrescue.name=虚空救援护符
+item.charm.slaughterimpact.name=屠夫冲击护符
+item.charm.lastresort.tooltip=Teleports $0 blocks away from finishing hit with cooldown of $1 seconds
+item.charm.lastresort.name=Charm of Last Resort
+item.charm.magicdefense.tooltip=-$0 magic damage taken
+item.charm.magicdefense.name=Charm of Magic Defense
+entity.louse.name=Louse
+container.charmPouch=护符袋
+container.runeCrafting=符文合成
+item.charm.blockingrepulsion.tooltip=-$0 damage taken and $1x knockback repulsed
+item.charm.blockingrepulsion.name=Charm of Blocking Repulsion
+item.fireShard.name=Fire Shard
+item.charm.basicpower.tooltip=+$0 damage
+item.charm.basicagility.tooltip=+$0 speed
+item.charm.basicvigor.tooltip=+$0 health regeneration speed
+item.charm.basicdefense.tooltip=-$0 damage taken
+item.charm.basicmagic.tooltip=+$0 experience
+item.charm.equality.tooltip=+$0 damage\n+$1 speed\n+$2 health regeneration speed\n-$3 damage taken\n+$4 experience
+item.charm.blocking.tooltip=-$0 damage taken when blocking
+item.charm.blockingreflection.tooltip=-$0 damage taken and $1 reflected when blocking
+item.charm.digestiverecover.tooltip=$0 health per 1 hunger bar
+item.charm.lifesteal.tooltip=$0 health gained per $1 health dealt
+item.charm.damageredirection.tooltip=$0 damage redirected to $1 nearby creature(s)
+item.charm.magicpenetration.tooltip=$0 of dealt damage penetrates armor using magic
+item.charm.witcheryharm.tooltip=$0 chance to cause level $1 effect for $2 seconds
+item.charm.witcherydefense.tooltip=
+item.charm.fallingprotection.tooltip=+$0 blocks
+item.charm.haste.tooltip=+$0 dig speed
+item.charm.criticalstrike.tooltip=$0 chance to deal $1 critical damage
+item.charm.seconddurability.tooltip=$0 chance to recover $1 durability
+item.charm.voidrescue.tooltip=
+item.charm.slaughterimpact.tooltip=$0 damage dealt in $1 radius on kill
+item.charm.cannotstack=This charm will not stack effects with other charms of this type!
+entity.hauntedMiner.name=Haunted Miner
