--- a/src/main/resources/assets/hardcoreenderexpansion/lang/zh_TW.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/zh_TW.lang
@@ -45,7 +45,6 @@ item.igneousRock.name=火成岩
 item.instabilityOrb.name=震盪球
 item.potionOfInstability.name=不穩定藥水
 item.potionOfInstability.splash.name=濺射的不穩定藥水
-item.gemFragment.name=寶石碎片
 item.transferenceGem.name=傳送寶石
 item.templeCaller.name=神廟召喚物
 item.silverfishBlood.name=蠹蟲之血
@@ -74,78 +73,117 @@ entity.forestGhost.name=幽魂
 entity.fireGolem.name=火傀儡
 entity.scorchingLens.name=灼熱之眼
 namegenerator.middle=,
-achievement.magicOfDecomposition.desc=Acquire some Stardust
+achievement.magicOfDecomposition.desc=獲得一些星辰
 challenge.hard0Deaths=極限玩家
-challenge.hard0Deaths.desc=屠龍而不死
+challenge.hard0Deaths.desc=屠龍不死
 challenge.bedExplode=不眠者
 challenge.bedExplode.desc=利用爆炸的床完成最後傷害
 challenge.noEnderman=末影人愛好者
 challenge.noEnderman.desc=在戰鬥中不殺死任何末影人
-achievement.learningThePowers=Learning the powers
-achievement.newAdventures.desc=Welcome to Hardcore Ender Expansion!
-achievement.newAdventures=Time for new adventures!
+achievement.learningThePowers=掌控新的力量
+achievement.newAdventures.desc=歡迎來到極限末地!
+achievement.newAdventures=開始新的冒險!
 challenge.title=挑戰:
 challenge.difficulty.hard=困難難度
 challenge.difficulty.mediumorhard=標準/困難難度
-item.enderCompendium.name=Ender Compendium
-item.knowledgeFragment.name=Knowledge Fragment
-tile.decompositionTable.name=Decomposition Table
-tile.energyExtractionTable.name=Energy Extraction Table
-tile.ravagedBrick.name=Ravaged Brick
+item.enderCompendium.name=末地手冊
+item.knowledgeFragment.name=學識碎片
+tile.decompositionTable.name=分解台
+tile.energyExtractionTable.name=能量提取台
+tile.ravagedBrick.name=毀滅磚塊
 tile.energyCluster.name=Energy Cluster
-item.spectralWand.name=Spectral Wand
-container.enhancedBrewing=Enhanced Brewing Stand
-container.decompositionTable=Decomposition Table
-container.energyExtractionTable=Energy Extraction Table
-tile.sphalerite.name=Sphalerite
-tile.sphalerite.stardust.name=Sphalerite with Stardust
+item.spectralWand.name=光譜魔杖
+container.enhancedBrewing=強化釀造台
+container.decompositionTable=分解台
+container.energyExtractionTable=能量提取台
+tile.sphalerite.name=閃鋅礦
+tile.sphalerite.stardust.name=閃鋅星辰
 item.spatialDashGem.name=Spatial Dash Gem
-item.biomeCompass.name=Biome Compass
-achievement.magicOfDecomposition=The magic of decomposition
-achievement.wholeNewCultures.desc=Visit a Biome Island
-achievement.wholeNewCultures=Whole new cultures!
-achievement.thatWasClose.desc=Save yourself from falling into the void
-achievement.thatWasClose=That was close!
-achievement.deadVisionary.desc=Kill an Ender Eye to get Spatial Dash Gem
-achievement.deadVisionary=Dead visionary
-achievement.superShiny.desc=Enhance and Ender Pearl with all possible items
-achievement.superShiny=Super shiny!
-achievement.traveling101.desc=Enhance an Ender Pearl
-achievement.traveling101=Traveling 101
-achievement.rebirth.desc=Use the Temple Caller and regenerate the End
-achievement.rebirth=Rebirth
-achievement.learningThePowers.desc=Create a Dragon Essence Altar
-=腐化蝠翼
-=破損末影人遺物
-=就這樣開始吧…
-=找到冒險家日誌的第一頁
-=熱情的讀者
-=找到冒險家日誌的所有書頁
-=極限玩家
-=取得一些龍之精華
-=學習力量之道
-=搭建龍之精華祭壇
-=強化釀造台
-=升級你的釀造台
-=重生
-=將末影龍蛋放入神廟
-=探索者
-=探索島外的世界
-=它在閃閃發光!
-=強化末影珍珠
-=烤得酥脆
-=得到了過多火成岩
-=被遺忘的紫羅蘭
-=在亡者之花枯萎後拾取它
-=死亡之眼
-=殺死末影之眼
-=格外閃亮
-=製作出擁有全部強化的末影珍珠
-=迷之激情
-=殺死烈焰魔
-=回家吧，末影人!
-=殺死末影魔
-=速戰速決
-=10分鐘內屠龍
-=裸戰末影龍
-=在戰鬥中不穿戴任何裝備(包括南瓜頭)
+item.biomeCompass.name=群落指向針
+achievement.magicOfDecomposition=分解的魔力
+achievement.wholeNewCultures.desc=遊覽一個空島群落
+achievement.wholeNewCultures=壯麗的新景觀!
+achievement.thatWasClose.desc=拯救自己掉入虛空
+achievement.thatWasClose=好險!
+achievement.deadVisionary.desc=殺死末影之言並獲得空間寶石
+achievement.deadVisionary=死亡之預言
+achievement.superShiny.desc=強化和末影珍珠有關的所有物品
+achievement.superShiny=超級閃亮!
+achievement.traveling101.desc=強化一個末影珍珠
+achievement.traveling101=旅行 101
+achievement.rebirth.desc=使用神廟召喚物重生末地
+achievement.rebirth=重生
+achievement.learningThePowers.desc=創造一個龍之精華祭壇
+item.endermanRelicShattered.name=破碎的末影人遺物
+container.endPowderEnhancements=附魔末影粉
+achievement.theMoreYouKnow=了解更多
+achievement.theMoreYouKnow.desc=合成一個末地手冊
+tile.crossedDecoration.violetMoss.tall.name=高大的紫苔
+tile.crossedDecoration.violetMoss.moderate.name=中型紫苔
+tile.crossedDecoration.violetMoss.short.name=矮紫苔
+tile.ravagedBrickSmooth.name=平滑毀滅磚塊
+tile.ravagedBrickGlow.name=發光毀滅磚塊
+tile.ravagedBrickSlab.name=毀滅半磚
+tile.ravagedBrickStairs.name=毀滅磚樓梯
+tile.ravagedBrickFence.name=Ravaged Brick Fence
+tile.cinder.name=Cinder
+item.scorchingPickaxe.name=灼熱之鎬
+item.charmPouch.name=護符袋
+item.rune.power.name=力量符文
+item.rune.agility.name=敏捷符文
+item.rune.vigor.name=活力符文
+item.rune.defense.name=防禦符文
+item.rune.magic.name=魔法符文
+item.rune.void.name=虛空符文
+item.charm.basicpower.name=力量護符
+item.charm.basicagility.name=敏捷護符
+item.charm.basicvigor.name=活力護符
+item.charm.basicdefense.name=防禦護符
+item.charm.basicmagic.name=魔法護符
+item.charm.equality.name=平衡護符
+item.charm.blocking.name=採掘護符
+item.charm.blockingreflection.name=採掘反射護符
+item.charm.digestiverecover.name=恢復護符
+item.charm.lifesteal.name=生命偷取護符
+item.charm.damageredirection.name=傷害轉移護符
+item.charm.magicpenetration.name=魔法穿透護符
+item.charm.witcheryharm.name=巫術打擊護符
+item.charm.witcherydefense.name=巫術防禦護符
+item.charm.fallingprotection.name=跌落保護護符
+item.charm.haste.name=急速護符
+item.charm.criticalstrike.name=暴擊護符
+item.charm.seconddurability.name=雙重耐久護符
+item.charm.voidrescue.name=虛空救援護符
+item.charm.slaughterimpact.name=屠夫衝擊護符
+item.charm.lastresort.tooltip=Teleports $0 blocks away from finishing hit with cooldown of $1 seconds
+item.charm.lastresort.name=Charm of Last Resort
+item.charm.magicdefense.tooltip=-$0 magic damage taken
+item.charm.magicdefense.name=Charm of Magic Defense
+entity.louse.name=Louse
+container.charmPouch=護符袋
+container.runeCrafting=符文合成
+item.charm.blockingrepulsion.tooltip=-$0 damage taken and $1x knockback repulsed
+item.charm.blockingrepulsion.name=Charm of Blocking Repulsion
+item.fireShard.name=Fire Shard
+item.charm.basicpower.tooltip=+$0 damage
+item.charm.basicagility.tooltip=+$0 speed
+item.charm.basicvigor.tooltip=+$0 health regeneration speed
+item.charm.basicdefense.tooltip=-$0 damage taken
+item.charm.basicmagic.tooltip=+$0 experience
+item.charm.equality.tooltip=+$0 damage\n+$1 speed\n+$2 health regeneration speed\n-$3 damage taken\n+$4 experience
+item.charm.blocking.tooltip=-$0 damage taken when blocking
+item.charm.blockingreflection.tooltip=-$0 damage taken and $1 reflected when blocking
+item.charm.digestiverecover.tooltip=$0 health per 1 hunger bar
+item.charm.lifesteal.tooltip=$0 health gained per $1 health dealt
+item.charm.damageredirection.tooltip=$0 damage redirected to $1 nearby creature(s)
+item.charm.magicpenetration.tooltip=$0 of dealt damage penetrates armor using magic
+item.charm.witcheryharm.tooltip=$0 chance to cause level $1 effect for $2 seconds
+item.charm.witcherydefense.tooltip=
+item.charm.fallingprotection.tooltip=+$0 blocks
+item.charm.haste.tooltip=+$0 dig speed
+item.charm.criticalstrike.tooltip=$0 chance to deal $1 critical damage
+item.charm.seconddurability.tooltip=$0 chance to recover $1 durability
+item.charm.voidrescue.tooltip=
+item.charm.slaughterimpact.tooltip=$0 damage dealt in $1 radius on kill
+item.charm.cannotstack=This charm will not stack effects with other charms of this type!
+entity.hauntedMiner.name=Haunted Miner
