--- a/src/main/resources/assets/hardcoreenderexpansion/lang/cs_CZ.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/cs_CZ.lang
@@ -45,7 +45,6 @@ item.igneousRock.name=Žhnoucí kámen
 item.instabilityOrb.name=Koule nestabilnosti
 item.potionOfInstability.name=Lektvar nestabilnosti
 item.potionOfInstability.splash.name=Vrhací Lektvar nestabilnosti
-item.gemFragment.name=Úlomek klenotu
 item.transferenceGem.name=Klenot přemístění
 item.templeCaller.name=Vyvolávač chrámu
 item.silverfishBlood.name=Krev Rybenky
@@ -115,34 +114,76 @@ achievement.traveling101=Základy cestování
 achievement.rebirth.desc=Použij Vyvolávač chrámu a obnov End
 achievement.rebirth=Znovuzrození
 achievement.learningThePowers.desc=Vytvoř Oltář dračí esence
-=Roztříštěna relikvie z Endu
-=A tak to začíná...
-=Najdi první stránku dobrodruhova deníku
-=Náruživý čtenář
-=Najdi všechny stránky dobrodruhova deníku
-=Hardcore hráč
-=Získej Dračí esenci
-=Vylepši varný stojan
-=Znovuzrození
-=Umísti dračí vejce do chrámu
-=Badatel
-=Prozkoumávej oblast daleko od ostrova
-=Leskne se to!
-=Vylepši perlu z Endu
-=Spálen na uhel
-=Vezmi příliš mnoho žhnoucího kamene
-=Zapomenuta fialka
-=Seber seschlou Květinu smrti
-=Mrtvý vizionář
-=Zabij Oko z Endu
-=OSLŇUJÍCÍ
-=Použij všechna vylepšení na perlu z Endu
-=A puzzling passion
-=Zabij Ohnivého Ďábla
-=Endermani, jděte domů!
-=Zabij Démona z Endu
-=Rychlovka
-=Zabij draka do 10 minut
-=Nahá sebevražda
-=Neměj na sobě během boje žádné brnění nebo dýně
-=Křídlo Zamořeného Netopýra
+item.endermanRelicShattered.name=Shattered Enderman Relic
+container.endPowderEnhancements=End Powder Enhancements
+achievement.theMoreYouKnow=The more you know
+achievement.theMoreYouKnow.desc=Craft an Ender Compendium
+tile.crossedDecoration.violetMoss.tall.name=Tall Violet Moss
+tile.crossedDecoration.violetMoss.moderate.name=Moderate Violet Moss
+tile.crossedDecoration.violetMoss.short.name=Short Violet Moss
+tile.ravagedBrickSmooth.name=Smooth Ravaged Brick
+tile.ravagedBrickGlow.name=Zářící zpustošené cihly
+tile.ravagedBrickSlab.name=Ravaged Brick Slab
+tile.ravagedBrickStairs.name=Ravaged Brick Stairs
+tile.ravagedBrickFence.name=Ravaged Brick Fence
+tile.cinder.name=Cinder
+item.scorchingPickaxe.name=Scorching Pickaxe
+item.charmPouch.name=Charm Pouch
+item.rune.power.name=Rune of Power
+item.rune.agility.name=Rune of Agility
+item.rune.vigor.name=Rune of Vigor
+item.rune.defense.name=Rune of Defense
+item.rune.magic.name=Rune of Magic
+item.rune.void.name=Rune of Void
+item.charm.basicpower.name=Charm of Power
+item.charm.basicagility.name=Charm of Agility
+item.charm.basicvigor.name=Charm of Vigor
+item.charm.basicdefense.name=Charm of Defense
+item.charm.basicmagic.name=Charm of Magic
+item.charm.equality.name=Charm of Equality
+item.charm.blocking.name=Charm of Blocking
+item.charm.blockingreflection.name=Charm of Blocking Reflection
+item.charm.digestiverecover.name=Charm of Digestive Recover
+item.charm.lifesteal.name=Charm of Life Steal
+item.charm.damageredirection.name=Charm of Damage Redirection
+item.charm.magicpenetration.name=Charm of Magic Penetration
+item.charm.witcheryharm.name=Charm of Witchery Harm
+item.charm.witcherydefense.name=Charm of Witchery Defense
+item.charm.fallingprotection.name=Charm of Falling Protection
+item.charm.haste.name=Charm of Haste
+item.charm.criticalstrike.name=Charm of Critical Strike
+item.charm.seconddurability.name=Charm of Second Durability
+item.charm.voidrescue.name=Charm of Void Rescue
+item.charm.slaughterimpact.name=Charm of Slaughter Impact
+item.charm.lastresort.tooltip=Teleports $0 blocks away from finishing hit with cooldown of $1 seconds
+item.charm.lastresort.name=Charm of Last Resort
+item.charm.magicdefense.tooltip=-$0 magic damage taken
+item.charm.magicdefense.name=Charm of Magic Defense
+entity.louse.name=Veš
+container.charmPouch=Charm Pouch
+container.runeCrafting=Rune Crafting
+item.charm.blockingrepulsion.tooltip=-$0 damage taken and $1x knockback repulsed
+item.charm.blockingrepulsion.name=Charm of Blocking Repulsion
+item.fireShard.name=Fire Shard
+item.charm.basicpower.tooltip=+$0 damage
+item.charm.basicagility.tooltip=+$0 speed
+item.charm.basicvigor.tooltip=+$0 health regeneration speed
+item.charm.basicdefense.tooltip=-$0 damage taken
+item.charm.basicmagic.tooltip=+$0 experience
+item.charm.equality.tooltip=+$0 damage\n+$1 speed\n+$2 health regeneration speed\n-$3 damage taken\n+$4 experience
+item.charm.blocking.tooltip=-$0 damage taken when blocking
+item.charm.blockingreflection.tooltip=-$0 damage taken and $1 reflected when blocking
+item.charm.digestiverecover.tooltip=$0 health per 1 hunger bar
+item.charm.lifesteal.tooltip=$0 health gained per $1 health dealt
+item.charm.damageredirection.tooltip=$0 damage redirected to $1 nearby creature(s)
+item.charm.magicpenetration.tooltip=$0 of dealt damage penetrates armor using magic
+item.charm.witcheryharm.tooltip=$0 chance to cause level $1 effect for $2 seconds
+item.charm.witcherydefense.tooltip=
+item.charm.fallingprotection.tooltip=+$0 blocks
+item.charm.haste.tooltip=+$0 dig speed
+item.charm.criticalstrike.tooltip=$0 chance to deal $1 critical damage
+item.charm.seconddurability.tooltip=$0 chance to recover $1 durability
+item.charm.voidrescue.tooltip=
+item.charm.slaughterimpact.tooltip=$0 damage dealt in $1 radius on kill
+item.charm.cannotstack=This charm will not stack effects with other charms of this type!
+entity.hauntedMiner.name=Haunted Miner
