--- a/src/main/resources/assets/hardcoreenderexpansion/lang/da_DK.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/da_DK.lang
@@ -45,7 +45,6 @@ item.igneousRock.name=Igneous sten
 item.instabilityOrb.name=Ustabilitets kugle
 item.potionOfInstability.name=Ustabilitets potion
 item.potionOfInstability.splash.name=Ustabilitets kastepotion
-item.gemFragment.name=Ædelstens fragment
 item.transferenceGem.name=Teleportations ædelsten
 item.templeCaller.name=Tempel kalder
 item.silverfishBlood.name=Sølvfiske blod
@@ -80,7 +79,7 @@ challenge.hard0Deaths.desc=Dræb enderdragen uden at dø
 challenge.bedExplode=Insomniac
 challenge.bedExplode.desc=Giv den dræbende skade men en senge eksplosion
 challenge.noEnderman=Enderelsker
-challenge.noEnderman.desc=Don&apos;t kill a single enderman during the battle
+challenge.noEnderman.desc=Don't kill a single enderman during the battle
 achievement.learningThePowers=Learning the powers
 achievement.newAdventures.desc=Welcome to Hardcore Ender Expansion!
 achievement.newAdventures=Time for new adventures!
@@ -115,35 +114,76 @@ achievement.traveling101=Traveling 101
 achievement.rebirth.desc=Use the Temple Caller and regenerate the End
 achievement.rebirth=Rebirth
 achievement.learningThePowers.desc=Create a Dragon Essence Altar
-=Inficeret flagermusevinge
-=Knust endermans relikvie
-=og sådan begynder det
-=find den første side i eventyrerens dagbog
-=passioneret læser
-=find alle siderne til æventyrerens dagbog
-=Hardcore spiller
-=Skaf noget enderdrage essens
-=Skab et enderdrage essens alter
-=Forbedret bryggeri
-=Upgrader din bryggestand
-=Genfødsel
-=Placer drage æg i templet
-=Udforsker
-=Udforsk længere udfra øen
-=Det skinner!
-=Forbeder en ender perle
-=Brændt til ukendelighed
-=Få for meget igneoussten
-=Den forglemte viol
-=Saml en dødsblomst op når den er død
-=En død visionær
-=Dræb ender øjet
-=SUPER SKINNENDE
-=Skab en ender perle med alle forbedringerne
-=En gådefuld passion
-=Dræb ild skabningen
-=Gå hjem, enderman
-=Dræb ender dæmonen
-=Dræb enderdragen på ti minutter
-=Nøgent selvmord
-=Gå nøgen i kamp
+item.endermanRelicShattered.name=Shattered Enderman Relic
+container.endPowderEnhancements=End Powder Enhancements
+achievement.theMoreYouKnow=The more you know
+achievement.theMoreYouKnow.desc=Craft an Ender Compendium
+tile.crossedDecoration.violetMoss.tall.name=Tall Violet Moss
+tile.crossedDecoration.violetMoss.moderate.name=Moderate Violet Moss
+tile.crossedDecoration.violetMoss.short.name=Short Violet Moss
+tile.ravagedBrickSmooth.name=Smooth Ravaged Brick
+tile.ravagedBrickGlow.name=Glowing Ravaged Brick
+tile.ravagedBrickSlab.name=Ravaged Brick Slab
+tile.ravagedBrickStairs.name=Ravaged Brick Stairs
+tile.ravagedBrickFence.name=Ravaged Brick Fence
+tile.cinder.name=Cinder
+item.scorchingPickaxe.name=Scorching Pickaxe
+item.charmPouch.name=Charm Pouch
+item.rune.power.name=Rune of Power
+item.rune.agility.name=Rune of Agility
+item.rune.vigor.name=Rune of Vigor
+item.rune.defense.name=Rune of Defense
+item.rune.magic.name=Rune of Magic
+item.rune.void.name=Rune of Void
+item.charm.basicpower.name=Charm of Power
+item.charm.basicagility.name=Charm of Agility
+item.charm.basicvigor.name=Charm of Vigor
+item.charm.basicdefense.name=Charm of Defense
+item.charm.basicmagic.name=Charm of Magic
+item.charm.equality.name=Charm of Equality
+item.charm.blocking.name=Charm of Blocking
+item.charm.blockingreflection.name=Charm of Blocking Reflection
+item.charm.digestiverecover.name=Charm of Digestive Recover
+item.charm.lifesteal.name=Charm of Life Steal
+item.charm.damageredirection.name=Charm of Damage Redirection
+item.charm.magicpenetration.name=Charm of Magic Penetration
+item.charm.witcheryharm.name=Charm of Witchery Harm
+item.charm.witcherydefense.name=Charm of Witchery Defense
+item.charm.fallingprotection.name=Charm of Falling Protection
+item.charm.haste.name=Charm of Haste
+item.charm.criticalstrike.name=Charm of Critical Strike
+item.charm.seconddurability.name=Charm of Second Durability
+item.charm.voidrescue.name=Charm of Void Rescue
+item.charm.slaughterimpact.name=Charm of Slaughter Impact
+item.charm.lastresort.tooltip=Teleports $0 blocks away from finishing hit with cooldown of $1 seconds
+item.charm.lastresort.name=Charm of Last Resort
+item.charm.magicdefense.tooltip=-$0 magic damage taken
+item.charm.magicdefense.name=Charm of Magic Defense
+entity.louse.name=Louse
+container.charmPouch=Charm Pouch
+container.runeCrafting=Rune Crafting
+item.charm.blockingrepulsion.tooltip=-$0 damage taken and $1x knockback repulsed
+item.charm.blockingrepulsion.name=Charm of Blocking Repulsion
+item.fireShard.name=Fire Shard
+item.charm.basicpower.tooltip=+$0 damage
+item.charm.basicagility.tooltip=+$0 speed
+item.charm.basicvigor.tooltip=+$0 health regeneration speed
+item.charm.basicdefense.tooltip=-$0 damage taken
+item.charm.basicmagic.tooltip=+$0 experience
+item.charm.equality.tooltip=+$0 damage\n+$1 speed\n+$2 health regeneration speed\n-$3 damage taken\n+$4 experience
+item.charm.blocking.tooltip=-$0 damage taken when blocking
+item.charm.blockingreflection.tooltip=-$0 damage taken and $1 reflected when blocking
+item.charm.digestiverecover.tooltip=$0 health per 1 hunger bar
+item.charm.lifesteal.tooltip=$0 health gained per $1 health dealt
+item.charm.damageredirection.tooltip=$0 damage redirected to $1 nearby creature(s)
+item.charm.magicpenetration.tooltip=$0 of dealt damage penetrates armor using magic
+item.charm.witcheryharm.tooltip=$0 chance to cause level $1 effect for $2 seconds
+item.charm.witcherydefense.tooltip=
+item.charm.fallingprotection.tooltip=+$0 blocks
+item.charm.haste.tooltip=+$0 dig speed
+item.charm.criticalstrike.tooltip=$0 chance to deal $1 critical damage
+item.charm.seconddurability.tooltip=$0 chance to recover $1 durability
+item.charm.voidrescue.tooltip=
+item.charm.slaughterimpact.tooltip=$0 damage dealt in $1 radius on kill
+item.charm.cannotstack=This charm will not stack effects with other charms of this type!
+entity.hauntedMiner.name=Haunted Miner
